@@ -65,6 +65,10 @@ VERSION 6.1.x
 
    Hope for approval soon.
 
+- **JR14 PDF integration**
+
+   Awaiting data files from Pedro Jiminez.
+
 - **HERA 1.0 and LHeC PDF migration and approval**
 
    Same procedure as for ATLAS and HERA 1.5, in contact with Voica.
