@@ -1,7 +1,12 @@
 #! /usr/bin/env python
 ## @configure_input@
 
-# Load settings from Python module, otherwise use install-time configururation
+import os, sys
+import optparse, textwrap, logging
+
+
+## Load settings from Python module, otherwise use install-time configururation
+# TODO: Just always require the Python module at some point?
 try:
     import lhapdf
     __version__ = lhapdf.__version__
@@ -9,13 +14,15 @@ try:
 except ImportError:
     __version__ = '@PACKAGE_VERSION@'
     configured_datadir = '@datarootdir@/@PACKAGE_TARNAME@'.replace('${prefix}', '@prefix@')
-
 major_version = '.'.join(__version__.split('.')[:2])
-urlbase = 'http://www.hepforge.org/archive/lhapdf/pdfsets/' + major_version + '/'
+
+
+## Base paths etc. for set and index file downloading
+urlbase = 'http://www.hepforge.org/archive/lhapdf/pdfsets/%s/' % major_version
+afsbase = '/afs/cern.ch/sw/lcg/external/lhapdfsets/current/'
+cvmfsbase='/cvmfs/sft.cern.ch/lcg/external/lhapdfsets/current/'
 index_filename = 'pdfsets.index'
 
-
-import os, sys, math, optparse, textwrap, logging, csv, urllib2, tarfile, fnmatch
 
 class Subcommand(object):
     """A subcommand of a root command-line application that may be
@@ -35,6 +42,7 @@ class Subcommand(object):
             self.parser.add_option('-h', '--help', action='help', help=optparse.SUPPRESS_HELP)
         self.aliases = aliases
         self.help = help
+
 
 class SubcommandsOptionParser(optparse.OptionParser):
     """A variant of OptionParser that parses subcommands and their arguments."""
@@ -74,8 +82,8 @@ class SubcommandsOptionParser(optparse.OptionParser):
         """Adds a Subcommand object to the parser's list of commands."""
         self.subcommands.append(cmd)
 
-    # Add the list of subcommands to the help message.
     def format_help(self, formatter=None):
+        """Add the list of subcommands to the help message."""
         # Get the original help message, to which we will append.
         out = optparse.OptionParser.format_help(self, formatter)
         if formatter is None:
@@ -120,8 +128,7 @@ class SubcommandsOptionParser(optparse.OptionParser):
                            for line in help_lines[1:]])
         formatter.dedent()
 
-        # Concatenate the original help message with the subcommand
-        # list.
+        # Concatenate the original help message with the subcommand list.
         return out + "".join(result)
 
     def _subcommand_for_name(self, name):
@@ -170,14 +177,15 @@ class SubcommandsOptionParser(optparse.OptionParser):
 
         return options, subcommand, suboptions, subargs
 
-class PdfSet(object):
+
+class SetInfo(object):
     """Stores PDF metadata: name, version, ID code."""
     def __init__(self, name, id_code, version):
         self.name    = name
         self.id_code = id_code
         self.version = version
     def __eq__(self, other):
-        if isinstance(other, PdfSet):
+        if isinstance(other, SetInfo):
             return self.name == other.name
         else:
             return self.name == other
@@ -188,13 +196,14 @@ class PdfSet(object):
 
 
 def get_reference_list(filepath):
-    """Reads reference file and returns list of PdfSet objects.
+    """Reads reference file and returns list of SetInfo objects.
 
     The reference file is space-delimited, with columns:
     id_code version name
     """
     database = []
     try:
+        import csv
         csv_file = open(filepath, 'rb')
         logging.debug('Reading %s' % filepath)
         reader = csv.reader(csv_file, delimiter=' ', skipinitialspace=True, strict=True)
@@ -207,7 +216,7 @@ def get_reference_list(filepath):
                 id_code, name, version = int(row[0]), str(row[1]), int(row[2])
             else:
                 raise ValueError
-            database.append(PdfSet(name, id_code, version))
+            database.append(SetInfo(name, id_code, version))
     except IOError:
         logging.error('Could not open %s' % filepath)
     except (ValueError, csv.Error):
@@ -219,8 +228,9 @@ def get_reference_list(filepath):
     return database
 
 
+# TODO: Require the Python module and use availablePDFSets()?
 def get_installed_list(path):
-    """Returns list of PdfSet objects representing PDFs installed in 'path'.
+    """Returns list of PDFSet objects representing PDFs installed in 'path'.
 
     The path to each YAML file is assumed to be:
     path/pdf_name/pdf_name.info
@@ -248,7 +258,7 @@ def get_installed_list(path):
                     version = None
 
                 name = subdir
-                database.append(PdfSet(name, 0, version))
+                database.append(SetInfo(name, 0, version))
             except IOError:
                 logging.error('Could not open %s' % metadata_filepath)
             except ValueError:
@@ -259,75 +269,96 @@ def get_installed_list(path):
     return database
 
 
-def download_file(url, dest_dir, dryrun=False):
-    """Download a file from url to destination directory."""
+# TODO: Move this into the Python module to allow Python-scripted downloading?
+def download_url(source, dest_dir, dryrun=False):
+    """Download a file from a URL or POSIX path source to the destination directory."""
+
     if not os.path.isdir(os.path.abspath(dest_dir)):
         logging.info('Creating directory %s' % dest_dir)
         os.makedirs(dest_dir)
+    dest_filepath = os.path.join(dest_dir, os.path.basename(source))
 
-    dest_filepath = os.path.join(dest_dir, os.path.basename(url))
-
-    try:
-        u = urllib2.urlopen(url)
-        file_size = int(u.info().getheaders('Content-Length')[0])
-    except urllib2.URLError, e:
-        logging.error('Unable to download %s' % url)
-        return False
-
-    logging.debug('Downloading from %s' % url)
-    logging.debug('Downloading to %s' % dest_filepath)
-    if dryrun:
-        logging.info('%s [%s]' % (os.path.basename(url), convertBytes(file_size)))
-        return False
-
-    try:
-        dest_file = open(dest_filepath, 'wb')
-    except IOError:
-        logging.error('Could not write to %s' % dest_filepath)
-        return False
-
-    try:
+    # Decide whether to copy or download
+    if source.startswith('/') or source.startswith('file://'): # POSIX
+        source = source.lstrip('file://')
+        logging.debug('Downloading from %s' % source)
+        logging.debug('Downloading to %s' % dest_filepath)
         try:
-            file_size_dl = 0
-            buffer_size  = 8192
-            while True:
-                buffer = u.read(buffer_size)
-                if not buffer: break
-
-                file_size_dl += len(buffer)
-                dest_file.write(buffer)
-
-                status  = chr(13) + '%s: ' % os.path.basename(url)
-                status += r'%s [%3.1f%%]' % (convertBytes(file_size_dl).rjust(10), file_size_dl * 100. / file_size)
-                print status,
-        except urllib2.URLError, e:
-            logging.error('Error during download: ', e.reason)
+            file_size = os.stat(source).st_size
+            if dryrun:
+                logging.info('%s [%s]' % (os.path.basename(source), convertBytes(file_size)))
+                return False
+            import shutil
+            shutil.copy(source, dest_filepath)
+        except:
+            logging.error('Unable to download %s' % source)
             return False
-        except KeyboardInterrupt:
-            logging.error('Download halted by user')
+
+    else: # URL
+        url = source
+        import urllib2 as urllib
+        try:
+            u = urllib.urlopen(url)
+            file_size = int(u.info().getheaders('Content-Length')[0])
+        except urllib.URLError, e:
+            logging.error('Unable to download %s' % url)
             return False
-    finally:
-        dest_file.close()
-        print
+
+        logging.debug('Downloading from %s' % url)
+        logging.debug('Downloading to %s' % dest_filepath)
+        if dryrun:
+            logging.info('%s [%s]' % (os.path.basename(url), convertBytes(file_size)))
+            return False
+
+        try:
+            dest_file = open(dest_filepath, 'wb')
+        except IOError:
+            logging.error('Could not write to %s' % dest_filepath)
+            return False
+        try:
+            try:
+                file_size_dl = 0
+                buffer_size  = 8192
+                while True:
+                    buffer = u.read(buffer_size)
+                    if not buffer: break
+
+                    file_size_dl += len(buffer)
+                    dest_file.write(buffer)
+
+                    status  = chr(13) + '%s: ' % os.path.basename(url)
+                    status += r'%s [%3.1f%%]' % (convertBytes(file_size_dl).rjust(10), file_size_dl * 100. / file_size)
+                    print status,
+            except urllib.URLError, e:
+                logging.error('Error during download: ', e.reason)
+                return False
+            except KeyboardInterrupt:
+                logging.error('Download halted by user')
+                return False
+        finally:
+            dest_file.close()
+            print
 
     return True
 
 
 def convertBytes(size, nDecimalPoints=1):
     units = ('B', 'KB', 'MB', 'GB')
+    import math
     i = int(math.floor(math.log(size, 1024)))
     p = math.pow(1024, i)
     s = round(size/p, nDecimalPoints)
-    if (s > 0):
+    if s > 0:
         return '%s %s' % (s, units[i])
     else:
         return '0 B'
 
 
 if __name__ == '__main__':
-    #######################
-    #  Setup subcommands  #
-    #######################
+
+    ########################
+    #  Set up subcommands  #
+    ########################
     pattern_match_desc = ' Supports Unix-style pattern matching of PDF names.'
 
     update_cmd = Subcommand('update',
@@ -337,24 +368,26 @@ if __name__ == '__main__':
     list_cmd = Subcommand('list', aliases=('ls',), usage='%prog [options] pattern...',
         description='List all available PDF sets, or search using a pattern.' + pattern_match_desc,
         help='list installed/available PDF sets')
-    list_cmd.parser.add_option('--installed', action='store_true',
+    list_cmd.parser.add_option('--installed', dest="INSTALLED", action='store_true',
         help='list installed PDF sets')
-    list_cmd.parser.add_option('--outdated', action='store_true',
+    list_cmd.parser.add_option('--outdated', dest="OUTDATED", action='store_true',
         help='list installed, but outdated, PDF sets')
-    list_cmd.parser.add_option('--codes', action='store_true',
+    list_cmd.parser.add_option('--codes', dest="CODES", action='store_true',
         help='additionally show ID codes')
 
     install_cmd = Subcommand('install', aliases=('get',), usage='%prog [options] pattern...',
         description='Download and unpack a list of PDFs, or those matching a pattern.' + pattern_match_desc,
         help='install PDF sets')
-    install_cmd.parser.add_option('--dryrun', action='store_true',
+    install_cmd.parser.add_option('--dryrun', dest="DRYRUN", action='store_true',
         help='Do not download sets')
-    install_cmd.parser.add_option('--upgrade', action='store_true',
+    install_cmd.parser.add_option('--upgrade', dest="UPGRADE", action='store_true',
         help='Force reinstall (used to upgrade)')
+    install_cmd.parser.add_option('--keep', dest="KEEP_TARBALLS", action='store_true',
+        help='Keep the downloaded tarballs')
 
-    #####################################
-    #  Setup global parser and options  #
-    #####################################
+    ######################################
+    #  Set up global parser and options  #
+    ######################################
     parser = SubcommandsOptionParser(
         description = 'LHAPDF is an interface to parton distribution functions. This program is intended for browsing and installing the PDFs.',
         version     = __version__,
@@ -365,9 +398,12 @@ if __name__ == '__main__':
     parser.add_option('-v', '--verbose', help='Output debug messages',
         dest='LOGLEVEL', action='store_const', const=logging.DEBUG, default=logging.INFO)
     parser.add_option('--listdir', default=configured_datadir,
-        help='PDF list directory [default: %default]')
+        dest='LISTDIR', help='PDF list directory [default: %default]')
     parser.add_option('--pdfdir', default=configured_datadir,
-        help='PDF sets directory [default: %default]')
+        dest='PDFDIR', help='PDF sets directory [default: %default]')
+    parser.add_option('--source', default=[cvmfsbase, afsbase, urlbase], action="append", #< prepend action doesn't exist :-( See below for workaround
+        dest='SOURCES', help='Prepend a path or URL to be used as a source of data files [default: %default]')
+
 
     ##############################
     #  Parse command-line input  #
@@ -375,22 +411,30 @@ if __name__ == '__main__':
     options, subcommand, suboptions, subargs = parser.parse_args()
     logging.basicConfig(level=options.LOGLEVEL, format='%(levelname)s: %(message)s')
     if subcommand is list_cmd:
-        if suboptions.installed and suboptions.outdated:
+        if suboptions.INSTALLED and suboptions.OUTDATED:
             subcommand.parser.error("Options '--installed' and '--outdated' are mutually exclusive")
 
+    # Re-order the sources list since optparse doesn't have a "prepend" action
+    options.SOURCES = options.SOURCES[3:] + options.SOURCES[:3]
+
+    def download_file(filename, dest_dir, dryrun=False): #, unvalidated=False):
+        for source in options.SOURCES: #< NOTE: use of global "options" for convenience
+            if download_url(urlbase + filename, dest_dir, dryrun):
+                return True
+        return False
 
 
     # Update command doesn't depend on PDF sets
     if subcommand is update_cmd:
-        download_file(urlbase + index_filename, options.listdir)
+        download_file(index_filename, options.LISTDIR)
         sys.exit(0)
 
 
     # List and install commands require us to build lists of reference and installed PDFs
     master_list, installed = {}, {}
-    for pdf in get_reference_list(os.path.join(options.listdir, index_filename)):
+    for pdf in get_reference_list(os.path.join(options.LISTDIR, index_filename)):
         master_list[pdf.name] = pdf
-    for pdf in get_installed_list(options.pdfdir):
+    for pdf in get_installed_list(options.PDFDIR):
         installed[pdf.name] = pdf
 
     # Check installation status of all PDFs
@@ -404,6 +448,7 @@ if __name__ == '__main__':
     # Unix-style pattern matching of arguments
     search_pdfs = []
     for pattern in subargs:
+        import fnmatch
         matched_pdfs = fnmatch.filter(master_list.keys(), pattern)
         if len(matched_pdfs) == 0:
             logging.warning('No matching PDFs for pattern: %s' % pattern)
@@ -416,15 +461,15 @@ if __name__ == '__main__':
         if len(subargs) == 0:
             search_pdfs = master_list.keys()
 
-        if suboptions.installed:
+        if suboptions.INSTALLED:
             displayed_pdfs = [pdf for pdf in search_pdfs if master_list[pdf].installed]
-        elif suboptions.outdated:
+        elif suboptions.OUTDATED:
             displayed_pdfs = [pdf for pdf in search_pdfs if master_list[pdf].outdated]
         else:
             displayed_pdfs = search_pdfs
 
         for pdf in sorted(displayed_pdfs):
-            if suboptions.codes:
+            if suboptions.CODES:
                 print '%d  %s' % (master_list[pdf].id_code, pdf)
             else:
                 print pdf
@@ -436,20 +481,32 @@ if __name__ == '__main__':
             if pdf not in master_list:
                 logging.warn('PDF not recognised: %s' % pdf)
                 continue
-            if pdf in installed and not suboptions.upgrade:
+            if pdf in installed and not suboptions.UPGRADE:
                 logging.warn('PDF already installed: %s (use --upgrade to force install)' % pdf)
                 continue
 
-            unvalidated = ''
+            # TODO: reinstate auto-downloading of unvalidated PDFs? I ~like that users need to manually download them
+            # unvalidated = ''
+            # if master_list[pdf].version == -1:
+            #     unvalidated = 'unvalidated/'
+            #     logging.warn('PDF unvalidated: %s' % pdf)
+
             if master_list[pdf].version == -1:
-                unvalidated = 'unvalidated/'
-                logging.warn('PDF unvalidated: %s' % pdf)
+                logging.warn('PDF %s is unvalidated. You need to download this manually' % pdf)
 
             tar_filename = pdf + '.tar.gz'
-            if download_file(urlbase + unvalidated + tar_filename, options.pdfdir, dryrun=suboptions.dryrun):
+            # if download_file(urlbase + unvalidated + tar_filename, options.PDFDIR, dryrun=suboptions.dryrun):
+            if download_file(tar_filename, options.PDFDIR, dryrun=suboptions.DRYRUN):
+                tarpath = os.path.join(options.PDFDIR, tar_filename)
                 try:
-                    tar_file = tarfile.open(os.path.join(options.pdfdir, tar_filename), 'r:gz')
-                    tar_file.extractall(options.pdfdir)
+                    import tarfile
+                    tar_file = tarfile.open(tarpath, 'r:gz')
+                    tar_file.extractall(options.PDFDIR)
                     tar_file.close()
                 except:
                     logging.error('Unable to extract %s' % tar_filename)
+                if not suboptions.KEEP_TARBALLS:
+                    try:
+                        os.remove(tarpath)
+                    except:
+                        logging.error('Unable to remove %s after expansion' % tar_filename)
